# skyler-plasma-taskmanager

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  READMECN.md
icontasks-skyler/: metadata.json
kickoff-skyler/: CMakeLists.txt  Messages.sh  main.qml  metadata.json
po/zh_CN/: plasma_applet_org.kde.plasma.taskmanager_extra.po
taskmanager-skyler/: CMakeLists.txt  Messages.sh  backend.cpp  main.xml  metadata.json  smartlauncherbackend.cpp  smartlauncheritem.cpp
taskmanager-skyler/qml/: ConfigAppearance.qml  ConfigBehavior.qml  ContextMenu.qml  GroupDialog.qml  MouseHandler.qml  Task.qml  TaskBadgeOverlay.qml  TaskList.qml  TaskProgressOverlay.qml  main.qml
taskmanager-skyler/qml/code/: LayoutMetrics.js
